first part done

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         <div class="input-group mb-3">
             <input id="search-box" type="text" class="form-control"                    placeholder="search" aria-label="search"
                 aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <span onclick="allPhones()" class="input-group-text" id="search-btn">Search</span>
+            <div class="input-group-append ">
+                <span onclick="allPhones()" class="btn btn-info input-group-text" id="search-btn">Search</span>
             </div>
+        </div>
+        <div id="phone-container" class="phone-container">
+            
         </div>
     </div>
 
