first part with grid

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <span onclick="allPhones()" class="btn btn-info input-group-text" id="search-btn">Search</span>
             </div>
         </div>
-        <div id="phone-container" class="phone-container">
+    
+        <div id="phone-container" class="phone-container text-center row row-cols-1 row-cols-md-3 g-4">
             
         </div>
     </div>
