--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="input-group mb-3">
-            <input id="search-box" type="text" class="form-control"                    placeholder="search" aria-label="search"
+            <input id="search-box" type="text" class="form-control"                    placeholder="Search Phone" aria-label="search"
                 aria-describedby="basic-addon2">
             <div class="input-group-append ">
                 <span onclick="allPhones()" class="btn btn-info input-group-text" id="search-btn">Search</span>
