without search box error done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     <!-- details section -->
         <div id="details-container"
-            class="details-container text-center bg-light bg-gradient mt-5">
+            class="details-container  bg-light bg-gradient mt-5">
             
         </div>
     <!-- all phone section -->
