done without some finishing touch

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <span onclick="allPhones()" class="btn btn-info input-group-text" id="search-btn">Search</span>
             </div>
         </div>
+    <!-- error  -->
+        <h2 id="error-show" class="text-center text-danger"> </h2>
+        
     <!-- details section -->
         <div id="details-container"
             class="details-container  bg-light bg-gradient mt-5">
